[package]
name = "azusa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.5.2"
thiserror = "1.0.37"

[target."cfg(windows)".dependencies]
gdiplus-sys2 = "0.1.1"

[target."cfg(windows)".dependencies.winapi]
version = "0.3.9"
features = [
    "wingdi",
    "minwindef",
    "windef",
    "minwinbase",
    "winuser",
    "libloaderapi",
    "basetsd"
]


[dev-dependencies]
winit = "0.28.6"